@@ -7,7 +7,10 @@ depends:
     claim
     claim_document
     underwriting
+extras_depend:
+    underwriting_process
 xml:
     underwriting.xml
     claim.xml
     rule_engine.xml
+    process.xml
