@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree editable="bottom">
+    <field name="selected"/>
+    <field name="name" expand="1"/>
+    <field name="target" tree_invisible="1"/>
+</tree>
