@@ -1,3 +1,5 @@
+* FEA#7263 Amélioration de l'ergonomie pour l'ajout des résultats
+
 Version 1.12 - 2017-04-28
 * FEA#0000 Affichage de l'état courant dans la liste des demandes de décisions
 * FEA#0000 Configuration de processus pour les demandes de décisions
