@@ -1,3 +1,5 @@
+* FEA#7263 Improve ergonomy when adding results
+
 Version 1.12 - 2017-04-28
 * FEA#0000 Display current state in underwriting list view
 * FEA#0000 Process configuration for underwritings
